--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-unused-vars": "warn"
     }
 }
