--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Tildes Extended",
-  "description": "Cross Browsers extension to improve Tildes.net UI/UX",
-  "version": "0.1",
+  "description": "Browsers extension to improve Tildes.net UI/UX",
+  "version": "0.2",
   "homepage_url": "https://github.com/theCrius/tildes-extended",
   "permissions": [
     "storage",
@@ -18,11 +18,12 @@
     ]
   },
 
+  "options_page": "options.html",
+
   "content_scripts": [{
     "matches": ["*://tildes.net/*"],
     "js": [
       "scripts/vendors/jquery.min.js",
-      "scripts/globals.js",
       "scripts/link-new-tab.js",
       "scripts/jump-to-new-comment.js"
     ],
