Compatibility issue with firefox

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,7 +18,10 @@
     ]
   },
 
-  "options_page": "options.html",
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
 
   "content_scripts": [{
     "matches": ["*://tildes.net/*"],
