Add feature: load custom css from URL
using CORS Anywhere for now, need to investigate if it's a big bad 'no no' as I'm afraid it is.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,8 +25,16 @@
 
   "content_scripts": [{
     "matches": ["*://tildes.net/*"],
+    "run_at": "document_start",
     "js": [
       "scripts/vendors/jquery.min.js",
+      "scripts/custom-styles.js"
+    ]
+  },
+  {
+    "matches": ["*://tildes.net/*"],
+    "run_at": "document_end",
+    "js": [
       "scripts/link-new-tab.js",
       "scripts/jump-to-new-comment.js"
     ],
