Experimenting markdown-preview
Code from https://github.com/avinassh/tildes-plus

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -28,6 +28,7 @@
     "run_at": "document_start",
     "js": [
       "scripts/vendors/jquery.min.js",
+      "scripts/vendors/marked.min.js",
       "scripts/custom-styles.js"
     ]
   },
@@ -36,7 +37,8 @@
     "run_at": "document_end",
     "js": [
       "scripts/link-new-tab.js",
-      "scripts/jump-to-new-comment.js"
+      "scripts/jump-to-new-comment.js",
+      "scripts/markdown-preview.js"
     ],
     "css": [
       "styles/jump-to-new-comment.css"
