--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Claudio Vallesi",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "marked": "^0.4.0"
   }
 }
