--- a/src/manifest.json
+++ b/src/manifest.json
@@ -39,10 +39,12 @@
     "js": [
       "scripts/link-new-tab.js",
       "scripts/jump-to-new-comment.js",
-      "scripts/markdown-preview.js"
+      "scripts/markdown-preview.js",
+      "scripts/users-label.js"
     ],
     "css": [
-      "styles/jump-to-new-comment.css"
+      "styles/jump-to-new-comment.css",
+      "styles/users-label.css"
     ]
   }],
 
