--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,8 @@
   "permissions": [
     "tabs",
     "storage",
-    "*://tildes.net/*"
+    "*://tildes.net/*",
+    "*://*.tildes.net/*"
   ],
   "icons": {
     "48": "images/tildes-extended.png"
@@ -25,11 +26,13 @@
   },
 
   "content_scripts": [{
-    "matches": ["*://tildes.net/*"],
+    "matches": [
+      "*://tildes.net/*",
+      "*://*.tildes.net/*"
+    ],
     "run_at": "document_start",
     "js": [
       "scripts/vendors/jquery.min.js",
-      "scripts/vendors/marked.min.js",
       "scripts/custom-styles.js"
     ]
   },
@@ -37,6 +40,7 @@
     "matches": ["*://tildes.net/*"],
     "run_at": "document_end",
     "js": [
+      "scripts/vendors/marked.min.js",
       "scripts/link-new-tab.js",
       "scripts/jump-to-new-comment.js",
       "scripts/markdown-preview.js",
