--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "serve": "gulp watch",
+    "serve": "gulp watch --debug",
+    "serve:build": "gulp watch",
     "build": "gulp"
   },
   "author": "Claudio Vallesi",
