--- a/src/manifest.json
+++ b/src/manifest.json
@@ -45,12 +45,12 @@
       "scripts/jump-to-new-comment.js",
       "scripts/markdown-preview.js",
       "scripts/users-label.js",
-      "scripts/fixed-header.js"
+      "scripts/sticky-header.js"
     ],
     "css": [
       "styles/jump-to-new-comment.css",
       "styles/users-label.css",
-      "styles/fixed-header.css"
+      "styles/sticky-header.css"
     ]
   }],
 
