Add 'applications' setting in manifest.json (needed by firefox)
Chrome doesn't support it but should load nonetheless
https://bugs.chromium.org/p/chromium/issues/detail?id=677855

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -60,5 +60,11 @@
     }
   },
 
+  "applications": {
+    "gecko": {
+      "id": "tildes_extended@thecrius.git"
+    }
+  },
+
   "content_security_policy": "script-src 'self'; object-src 'self'; style-src 'unsafe-inline'"
 }
