--- a/src/manifest.json
+++ b/src/manifest.json
@@ -45,7 +45,8 @@
       "scripts/jump-to-new-comment.js",
       "scripts/markdown-preview.js",
       "scripts/users-label.js",
-      "scripts/sticky-header.js"
+      "scripts/sticky-header.js",
+      "scripts/miscellaneous.js"
     ],
     "css": [
       "styles/jump-to-new-comment.css",
