Add !important to no-header-logo + script run @ document_start
The css rule was overridden, added !important
The script running at document_end was making the logo appear and then being hidden. Moved it to the block that run on document_start to have the logo not appear at all.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,7 +33,11 @@
     "run_at": "document_start",
     "js": [
       "scripts/vendors/jquery.min.js",
-      "scripts/custom-styles.js"
+      "scripts/custom-styles.js",
+      "scripts/miscellaneous.js"
+    ],
+    "css": [
+      "styles/miscellaneous.css"
     ]
   },
   {
@@ -45,14 +49,12 @@
       "scripts/jump-to-new-comment.js",
       "scripts/markdown-preview.js",
       "scripts/users-label.js",
-      "scripts/sticky-header.js",
-      "scripts/miscellaneous.js"
+      "scripts/sticky-header.js"
     ],
     "css": [
       "styles/jump-to-new-comment.css",
       "styles/users-label.css",
-      "styles/sticky-header.css",
-      "styles/miscellaneous.css"
+      "styles/sticky-header.css"
     ]
   }],
 
