--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,6 +25,11 @@
     "open_in_tab": true
   },
 
+  "web_accessible_resources": [
+    "data/*.json",
+    "manifest.json"
+  ],
+
   "content_scripts": [{
     "matches": [
       "*://tildes.net/*",
