Add using straight fetch()
Chrome works. Firefox still doesn't work.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,6 +7,7 @@
   "permissions": [
     "tabs",
     "storage",
+    "*://cors-anywhere.herokuapp.com.com/*",
     "*://tildes.net/*",
     "*://*.tildes.net/*"
   ],
