Fix typo on manifest.json
Firefox seriously check that json file apparently

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   "permissions": [
     "tabs",
     "storage",
-    "*://cors-anywhere.herokuapp.com.com/*",
+    "*://cors-anywhere.herokuapp.com/*",
     "*://tildes.net/*",
     "*://*.tildes.net/*"
   ],
