--- a/src/manifest.json
+++ b/src/manifest.json
@@ -54,12 +54,14 @@
       "scripts/jump-to-new-comment.js",
       "scripts/markdown-preview.js",
       "scripts/users-label.js",
-      "scripts/sticky-header.js"
+      "scripts/sticky-header.js",
+      "scripts/view-on-outline.js"
     ],
     "css": [
       "styles/jump-to-new-comment.css",
       "styles/users-label.css",
-      "styles/sticky-header.css"
+      "styles/sticky-header.css",
+      "styles/view-on-outline.css"
     ]
   }],
 
