--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "author": "Claudio Vallesi",
   "license": "ISC",
   "scripts": {
-    "lint": "eslint src/**/*.js",
-    "serve": "gulp watch --debug-scripts",
-    "serve:build": "gulp watch",
-    "build": "gulp"
+    "build": "gulp build",
+    "serve": "gulp watch",
+    "lint": "gulp lint"
   },
   "dependencies": {
     "bootstrap": "^4.1.1",
@@ -19,12 +18,16 @@
   "devDependencies": {
     "del": "^3.0.0",
     "eslint": "^5.8.0",
-    "gulp": "^3.9.1",
-    "gulp-cleanhtml": "^1.0.3",
+    "gulp": "^4.0.0",
     "gulp-eslint": "^5.0.0",
+    "gulp-htmlclean": "^2.7.22",
     "gulp-sass": "^4.0.2",
     "gulp-strip-debug": "^3.0.0",
+    "gulp-stylelint": "^8.0.0",
     "gulp-uglify-es": "^1.0.4",
-    "gulp-zip": "^4.2.0"
+    "gulp-zip": "^4.2.0",
+    "merge2": "^1.2.3",
+    "stylelint": "^9.7.1",
+    "stylelint-config-recommended": "^2.1.0"
   }
 }
